# display-switch

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  dev.haim.display-switch.daemon.plist  rust-toolchain  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: build.yml
DisplaySwitch/: UsbWatcher.swift  config.swift  main.swift
DisplaySwitch.xcodeproj/: project.pbxproj
MacOS/: .gitignore  dev.haim.display-switch.daemon.plist
MacOS/DisplaySwitch/: UsbWatcher.swift  config.swift  logger.swift  main.swift
MacOS/DisplaySwitch.xcodeproj/: project.pbxproj
MacOS/display_switch.xcodeproj/: project.pbxproj
MacOS/display_switch.xcodeproj/xcshareddata/xcschemes/: display_switch.xcscheme
MacOS/src/: config.swift  main.swift
Windows/: Cargo.toml
Windows/src/: configuration.rs  display_control.rs  logging.rs  main.rs  pnp_detect.rs  usb_devices.rs
mac_ddc/: Package.resolved  Package.swift
mac_ddc/src/: mac_ddc.swift
src/: app.rs  configuration.rs  display_control.rs  input_source.rs  logging.rs  main.rs  pnp_detect.rs  usb.rs  usb_callback.rs
src/platform/: display_control_ddc_hi.rs  display_control_macos.rs  mod.rs  pnp_detect_libusb.rs  pnp_detect_windows.rs  wake_displays.rs  wake_screens.rs
