[package]
name = "display_switch"
version = "1.1.0"
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
edition = "2018"
description = "An utility to watch for USB device connect/disconnect events and switch display inputs via DDC/CI"
readme = "README.md"
repository = "https://github.com/haimgel/display-switch/"
license = "MIT"

[build-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[dependencies]
config = "^0.11"
paste = "^1"
dirs = "^3.0"
serde = { version = "^1.0", features = ["derive"] }
anyhow = "^1.0"
log = "^0.4"
simplelog = "^0.12"
ddc = "^0.2"
rusb = "^0.7"
shell-words = "^1"
ddc-hi = "0.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
ddc-macos = "^0.2"

[target.'cfg(target_os = "linux")'.dependencies]
ddc-i2c = "^0.2"
nvapi = "^0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^0.3", features = ["winuser", "libloaderapi"] }
ddc-winapi = "^0.2"
