[package]
name = "display_switch"
version = "1.5.0"
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
edition = "2021"
description = "An utility to watch for USB device connect/disconnect events and switch display inputs via DDC/CI"
readme = "README.md"
repository = "https://github.com/haimgel/display-switch/"
homepage = "https://github.com/haimgel/display-switch/"
build = "build.rs"
license = "MIT"

[dependencies]
config = { version = "0.15", features = ["ini"], default-features = false }
paste = "1.0"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
simplelog = "0.12"
ddc = "0.2"
ddc-hi = "0.4"
rusb = "0.9"
shell-words = "1.1"
clap = { version = "4.5.54", features = ["derive"] }

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build", "cargo"] }

[target.'cfg(target_os = "macos")'.dependencies]
ddc-macos = "0.2.2"

[target.'cfg(target_os = "linux")'.dependencies]
ddc-i2c = "0.2"
uinput = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "wincon"] }
ddc-winapi = "0.2"
nvapi = "0.1"